--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact Us - ilovecroissants.com</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <h1>Contact</h1>
-    <p>Email us at ilovecroissants@gmail.com
+    <h2>Contact</h2>
+    <h1>Email us for more info! </h1> <p> ilovecroissants@gmail.com
     <div class="link"> </p>
-      <a href="/">Back to Homepage</a>
+      <a href="/" title="Homepage">Back to Homepage</a>
     </div>
   </body>
 </html>
