--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=Hel, initial-scale=1.0" />
-    <title>Homepage</title>
+    <meta
+      name="description"
+      content="All about the delicious croissant: history, photos, recipes and more."
+    />
+    <title>Croissants Homepage - ilovecroissants.com</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <h1>Croissants 🥐</h1>
+    <h2>The Croissant 🥐</h2>
+    <h1>History of croissants, photos, croissant recipes, and more.</h1>
     <p>
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
       but mostly associated with France. Croissants are named for their
@@ -19,9 +24,9 @@
       texture, similar to a puff pastry.
     </p>
     <div class="link">
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Homepage">Homepage</a>
+      <a href="/photo.html" title="Photo">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
     </div>
   </body>
 </html>
