--- a/photo.html
+++ b/photo.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo</title>
+    <title>Photo of Croissant - ilovecroissants.com</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <h1>Photo</h1>
-    <img src="/images/croissant.jpeg" width="400" />
+    <h2>Photo</h2>
+    <h1>Delicious Croissants</h1>
+    <img src="/images/croissant.jpeg" width="400" alt="Croissants" />
     <div class="link">
       <br />
-      <a href="/">Back to Homepage</a>
+      <a href="/" title="Homepage">Back to Homepage</a>
     </div>
   </body>
 </html>
